--- a/My-town/nginx/nginx.conf
+++ b/My-town/nginx/nginx.conf
@@ -1,17 +1,26 @@
-upstream My-town {
+upstream tokmok {
     server web:8000;
 }
 
 server {
 
     listen 80;
-    # server_tokens off;
+    server_tokens off;
 
     location / {
-        proxy_pass http://My-town;
+        proxy_pass http://tokmok;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+        client_max_body_size 100M;
+    }
+
+    location /static/ {
+        alias ./My-town/static/;
+    }
+
+    location /media/ {
+        alias /home/My-town/web/media/;
     }
 
 }
