--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: dockerfile
     command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - static_volume:./My-town/static
+      - static_volume:/home/My-town/web/static
       - media_volume:/home/My-town/web/media
     expose:
       - 8000
@@ -26,7 +26,7 @@ services:
   nginx:
     build: ./My-town/nginx
     volumes:
-      - static_volume:./My-town/static
+      - static_volume:/home/My-town/web/static
       - media_volume:/home/My-town/web/media
     ports:
       - 1337:80
@@ -38,4 +38,3 @@ volumes:
   postgres_data:
   static_volume:
   media_volume:
-
