--- a/My-town/nginx/nginx.conf
+++ b/My-town/nginx/nginx.conf
@@ -16,7 +16,7 @@ server {
     }
 
     location /static/ {
-        alias ./My-town/static/;
+        alias /home/My-town/web/static/;
     }
 
     location /media/ {
