--- a/My-town/dockerfile
+++ b/My-town/dockerfile
@@ -8,16 +8,16 @@ WORKDIR /usr/src/My-town
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# install psycopg2 dependencies
+# install psycopg2 dependencies and gettext tools
 RUN apt-get update \
-    && apt-get install -y postgresql-server-dev-all gcc python3-dev
+    && apt-get install -y postgresql-server-dev-all gcc python3-dev gettext
 
 # install dependencies
 RUN pip install --upgrade pip
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
-# Установка netcat
+# Install netcat
 RUN apt-get update && apt-get install -y netcat
 
 # copy entrypoint.sh
@@ -26,16 +26,11 @@ RUN apt-get update && apt-get install dos2unix -y
 RUN dos2unix /usr/src/My-town/entrypoint.prod.sh \
     && chmod +x /usr/src/My-town/entrypoint.prod.sh
 
-
 # create the appropriate directories
 ENV HOME=/home/My-town
 ENV APP_HOME=/home/My-town/web
-RUN mkdir -p $HOME  # Создание родительской директории, если её нет
-RUN mkdir $APP_HOME
-RUN mkdir $APP_HOME/static
-RUN mkdir $APP_HOME/media
+RUN mkdir -p $HOME && mkdir $APP_HOME && mkdir $APP_HOME/static && mkdir $APP_HOME/media
 WORKDIR $APP_HOME
-
 
 # copy project
 COPY . .
